[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/jumper_mummy.png" type="Texture" id=1]
[ext_resource path="res://JumpMummy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/jump_mummy_teleg.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 41, 0, 41, 39 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 82, 0, 41, 39 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.27172
height = 11.2554

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.74924, 11.2894 )

[sub_resource type="CircleShape2D" id=9]
radius = 20.0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 17, 14, 12, 10 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.736501, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.736501, 1 )
colors = PoolColorArray( 0.717647, 0.662745, 0.466667, 1, 1, 1, 1, 0 )

[node name="JumpMummy" type="RigidBody2D"]
gravity_scale = 4.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -0.683082
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 2 )
rotation = -0.789516
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.71098, 1.70512 )
rotation = -0.751931
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, 1 )
shape = SubResource( 9 )
disabled = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -2, 1 )
emitting = false
amount = 6
lifetime = 0.5
one_shot = true
explosiveness = 0.8
lifetime_randomness = 0.56
local_coords = false
texture = SubResource( 6 )
direction = Vector2( 1, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 80.0
angular_velocity_random = 0.5
color_ramp = SubResource( 7 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( -2, 1 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 0.8
lifetime_randomness = 0.56
local_coords = false
direction = Vector2( 1, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 80.0
angular_velocity_random = 0.5
damping = 31.11
color_ramp = SubResource( 8 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
